Agrega soporte para carga de imágenes, optimiza el rendimiento de carga con 'loading="lazy"', y mejora el estilo de los componentes con nuevas clases CSS

--- a/front/src/app/globals.css
+++ b/front/src/app/globals.css
@@ -28,3 +28,9 @@
 }
 
 /* @media (prefers-color-scheme: dark) { */
+
+@layer utilities {
+  .clip-path-circle {
+    clip-path: circle(50% at 50% 50%);
+  }
+}
